Tweak the schema alignment UI

--- a/extensions/wikidata/module/langs/translation-en.json
+++ b/extensions/wikidata/module/langs/translation-en.json
@@ -16,14 +16,12 @@
                 "draggable-columns-header": "Columns:",
                 "add-item-button": "add item",
                 "add-term": "add term",
-                "remove-term": "remove term",
+                "remove": "remove",
                 "add-statement": "add statement",
-                "remove-statement": "remove statement",
                 "add-value": "add value",
                 "add-qualifier": "add qualifier",
                 "add-reference": "add reference",
                 "add-reference-snak": "add",
-                "remove-reference": "remove reference",
                 "nb-references": "&nbsp;references",
                 "remove-column": "remove column",
                 "label": "Label",
