--- a/extensions/wikidata/module/langs/translation-en.json
+++ b/extensions/wikidata/module/langs/translation-en.json
@@ -28,6 +28,8 @@
                 "description": "Description",
                 "alias": "Alias",
                 "item-or-reconciled-column": "item or reconciled column",
+                "amount": "amount",
+                "unit": "unit",
                 "datatype-not-supported-yet": "This datatype is not supported yet, sorry.",
                 "invalid-schema-warning-issues": "Your schema is incomplete, fix it to see the issues.",
                 "invalid-schema-warning-qs": "Your schema is incomplete, fix it to see the preview.",
