Add support for all Wikibase datatypes

--- a/extensions/wikidata/module/langs/translation-en.json
+++ b/extensions/wikidata/module/langs/translation-en.json
@@ -30,6 +30,11 @@
                 "item-or-reconciled-column": "item or reconciled column",
                 "amount": "amount",
                 "unit": "unit",
+                "full-url": "full URL including the protocol",
+                "tabular-data-with-prefix": "filename starting with \"Data:\"",
+                "commons-media": "filename",
+                "math-expression": "mathematical expression",
+                "geoshape-with-prefix": "filename starting with \"Data:\"",
                 "datatype-not-supported-yet": "This datatype is not supported yet, sorry.",
                 "invalid-schema-warning-issues": "Your schema is incomplete, fix it to see the issues.",
                 "invalid-schema-warning-qs": "Your schema is incomplete, fix it to see the preview.",
