Replace QS preview by visual preview of the edits

--- a/extensions/wikidata/module/langs/translation-en.json
+++ b/extensions/wikidata/module/langs/translation-en.json
@@ -10,9 +10,10 @@
         "wikidata-schema": {
                 "dialog-header": "Align to Wikidata",
                 "dialog-explanation": "The Wikidata schema below specifies how your tabular data will be transformed into Wikidata edits. You can drag and drop the column names below in most input boxes: for each row, edits will be generated with the values in these columns.",
+                "preview-explanation": "This tab shows the first 10 edits that will be made once you upload the changes to Wikidata. You can use facets to inspect the edits on particular items.",
                 "schema-tab-header": "Schema",
                 "warnings-tab-header": "Issues",
-                "qs-preview-tab-header": "QuickStatements preview",
+                "edits-preview-tab-header": "Preview",
                 "statements-header": "Statements",
                 "terms-header": "Terms",
                 "empty-statements": "no statements added",
@@ -41,7 +42,7 @@
                 "geoshape-with-prefix": "filename starting with \"Data:\"",
                 "datatype-not-supported-yet": "This datatype is not supported yet, sorry.",
                 "invalid-schema-warning-issues": "Your schema is incomplete, fix it to see the issues.",
-                "invalid-schema-warning-qs": "Your schema is incomplete, fix it to see the preview.",
+                "invalid-schema-warning-preview": "Your schema is incomplete, fix it to see the preview.",
                 "reset-button": "Reset",
                 "save-button": "Save",
                 "close-button": "Close",
