Add save and discard buttons on the Wikidata schema

--- a/extensions/wikidata/module/langs/translation-en.json
+++ b/extensions/wikidata/module/langs/translation-en.json
@@ -43,9 +43,12 @@
                 "datatype-not-supported-yet": "This datatype is not supported yet, sorry.",
                 "invalid-schema-warning-issues": "Your schema is incomplete, fix it to see the issues.",
                 "invalid-schema-warning-preview": "Your schema is incomplete, fix it to see the preview.",
-                "reset-button": "Reset",
-                "save-button": "Save",
+                "discard-button": "Discard changes",
+                "save-button": "Save schema",
                 "close-button": "Close",
+                "unsaved-changes-alt": "You have made unsaved changes to your Wikidata schema.",
+                "save-schema-alt": "Save the schema to OpenRefine. The changes will not be uploaded to Wikidata yet.",
+                "discard-schema-changes-alt": "Discard the changes made to the schema.",
                 "incomplete-schema-could-not-be-saved": "Your schema is incomplete so it cannot be saved yet.",
                 "unsaved-warning": "You have made unsaved changes to your Wikidata schema. Close anyway?"
         },
